renaming, add checkout

--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -16,6 +16,9 @@ jobs:
     outputs:
       matrix: ${{ steps.matrix.outputs.matrix}}
     steps:
+    - name: Checkout
+      uses: hgdata/checkout@v2
+
     - name: Source config
       id: config
       run: |
