--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Output matrix
       id: matrix
       run: |
-        wget https://github.com/mikefarah/yq/releases/download/v4.25.3/yq_linux_amd64 -O yq && chmod +x yq
-        config=$(yq r -j .github/dependabot_auto_merge.yml)
+        wget -q https://github.com/mikefarah/yq/releases/download/v4.25.3/yq_linux_amd64 -O yq && chmod +x yq
+        config=$(yq -o=json .github/dependabot_auto_merge.yml)
         echo $config
         echo "::set-output name=matrix::$config"
 
