--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -14,18 +14,18 @@ jobs:
     # if: ${{ github.actor == 'dependabot[bot]' }}
     if: always()
     outputs:
-      matrix: ${{ steps.matrix.outputs.matrix}}
+      config: ${{ steps.matrix.outputs.config}}
     steps:
     - name: Checkout
       uses: hgdata/checkout@v2
         
-    - name: Output matrix
+    - name: Output configuration matrix
       id: matrix
       run: |
         wget -q https://github.com/mikefarah/yq/releases/download/v4.25.3/yq_linux_amd64 -O yq && chmod +x yq
         config=$(yq -o=json .github/dependabot_auto_merge.yml)
         echo $config
-        echo "::set-output name=matrix::$config"
+        echo "::set-output name=config::$config"
 
   dependabot:
     name: Dependabot
@@ -34,7 +34,8 @@ jobs:
     # if: ${{ github.actor == 'dependabot[bot]' }}
     if: always()
     strategy:
-      matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
+      matrix: 
+        config: ${{ fromJson(needs.setup.outputs.matrix) }}
     permissions:
       pull-requests: write
       issues: write
@@ -47,12 +48,12 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Auto-merge Dependabot ${{ matrix.ecosystem }} patch releases  
-      if: ${{ contains(matrix.types, 'patch') }}
+    - name: Auto-merge Dependabot ${{ matrix.config.ecosystem }} patch releases  
+      if: ${{ contains(matrix.config.types, 'patch') }}
       run: echo "patch release"
 
-    - name: Auto-merge Dependabot ${{ matrix.ecosystem }} minor releases
-      if: ${{ contains(matrix.types, 'minor') }}
+    - name: Auto-merge Dependabot ${{ matrix.config.ecosystem }} minor releases
+      if: ${{ contains(matrix.config.types, 'minor') }}
       run: echo "minor release"
 
 
