--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         wget -q https://github.com/mikefarah/yq/releases/download/v4.25.3/yq_linux_amd64 -O yq && chmod +x yq
         config=$(yq -o=json .github/dependabot_auto_merge.yml)
-        echo "::set-output name=config::$config"
+        echo "::set-output name=config::{\"include\":$config}"
 
   dependabot:
     name: Dependabot
@@ -33,8 +33,7 @@ jobs:
     # if: ${{ github.actor == 'dependabot[bot]' }}
     if: always()
     strategy:
-      matrix:
-        include: ${{ fromJson(needs.setup.outputs.config) }}
+      matrix: ${{ fromJson(needs.setup.outputs.config) }}
     permissions:
       pull-requests: write
       issues: write
