--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -22,9 +22,8 @@ jobs:
     - name: Output configuration matrix
       id: matrix
       run: |
-        wget -q https://github.com/mikefarah/yq/releases/download/v4.25.3/yq_linux_amd64 -O yq && chmod +x yq
-        config=$(yq -o=json .github/dependabot_auto_merge.yml)
-        echo "::set-output name=config::{\"include\":$config}"
+        config='[{"ecosystem": "github-actions","types": ["patch"]}]'
+        echo "::set-output name=config::$config"
 
   dependabot:
     name: Dependabot
